--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-dark ">
+<nav class="navbar navbar-dark">
     <div class="container-fluid  navbar-default navbar-fixed-top">
         <div class="navbar-header ">
             <a class="navbar-brand" href="#">Facil Formar</a>
@@ -36,12 +36,12 @@
                     <%= link_to 'Svc-Log', svclogs_url %>
                 </li>
             </ul>
-        <ul class="nav navbar-nav navbar-right">
-            <li>
-              <%#= link_to "Log Out", destroy_user_session_url, method: :delete %>
-            </li>            
-        </ul>
-        </div>
+            <ul class="nav navbar-nav navbar-right">
+                <li>
+                  <%= link_to "Log Out", destroy_user_session_url, method: :delete %>
+                </li>            
+            </ul>
+            </div>
         
     </div>
 </nav>
