--- a/app/views/mslogs/_form.html.erb
+++ b/app/views/mslogs/_form.html.erb
@@ -1,8 +1,8 @@
-<div class="panl panel-default">
+<!-- <div class="panl panel-default"> -->
     <!-- <div class="panel-heading no-print">
         <div class="btn-group"></div>
     </div> -->
-    <div class="panel-body panel-form col-md-8">
+    <div class="col-md-8">
         <%= simple_form_for @mslog, html: {class: 'from-horizontal'}, wrapper: :horizontal_form do |f| %>
             <% if mslog.errors.any? %>
             <div id="error_explanation">
