--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -11,7 +11,8 @@
         <table class="table table-striped">
           <thead>
             <tr role="row">
-              <th>Name</th>
+              <!-- <th>Name</th> -->
+              <th><%= sort_link @q, :name %></th>
               <th>Phone</th>
               <th>Designation</th>
                <th>Organization</th>
