--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-dark">
     <div class="container-fluid  navbar-default navbar-fixed-top">
         <div class="navbar-header ">
-            <a class="navbar-brand" href="#">Facil Formar</a>
+            <a class="navbar-brand" href="#">Service Form</a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
